--- a/BookPoolV2/Views/Home/FilteredProducts.cshtml
+++ b/BookPoolV2/Views/Home/FilteredProducts.cshtml
@@ -4,52 +4,6 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<div id="mainSortByFilter" style="background: white; height:50px;padding-top:5px;">
-    <div class="row">
-        <div class="col s12 m12 l12 noscroll" style="overflow:auto;">
-            <div style="min-width: 800px;">
-                <div class="card horizontal smallfilter">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Rating: 4.0+</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Academic</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Magazines</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>News Papers</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="card horizontal smallfilter">
-                    <div class="card-stacked">
-                        <div class="card-content" style="padding: 2px 10px;">
-                            <p>Lebanese Writers</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
 <div class="row">
     <div class="col s12 m12 l12" style="overflow-x:auto; overflow-y:hidden;">
         <h5>FILTERED BY CATEGORY</h5>
@@ -70,68 +24,27 @@
     </div>
 </div>
 
-<div class="row itemslist">
 
-    <div class="col s12 m6 l4" style="overflow-x:auto; overflow-y:hidden;margin:10px 0;">
-        <div class="card" style="box-shadow:none; -webkit-box-shadow:none; max-width:400px;">
-            <div class="card-horizontal" style="height:150px;overflow: hidden;">
-                <div class="img-square-wrapper" style="width: 100px;">
-                    <img class="smallImage" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1543181274l/40909433.jpg" alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <div style="width:100%;">
-                        <div style="float:left;height: 100px;width: 100%;padding-right: 15px;">
-                            <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;">
-                                An economist walks into a brothel
-                            </h5>
-                            <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
-                                Price: 20,000LL
-                            </p>
-                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
-                                Is it worth swimming in shark-infested waters to surf a 50-foot, career-record wav...
-                            </p>
-                            <p class="card-text" style="margin-bottom: 0px;margin-top:6px;color:black;font-size:13px;font-weight:bold;bottom: 0;position: absolute;">
-                                <i class="material-icons" style="font-size:12px;">location_on</i> Beirut
-                            </p>
-                        </div>
-                        <div style="float:right;position: absolute;right: 0;">
-                            <span class="badge" style="color:white; background-color:#60842D;">4.1</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+@Html.Partial("_Filter")
 
-    <div class="col s12 m6 l4" style="overflow-x:auto; overflow-y:hidden;margin:10px 0;">
-        <div class="card" style="box-shadow:none; -webkit-box-shadow:none; max-width:400px;">
-            <div class="card-horizontal" style="height:150px;overflow: hidden;">
-                <div class="img-square-wrapper" style="width: 100px;">
-                    <img class="smallImage" src="https://i.gr-assets.com/images/S/compressed.photo.goodreads.com/books/1543181274l/40909433.jpg" alt="Card image cap">
-                </div>
-                <div class="card-body">
-                    <div style="width:100%;">
-                        <div style="float:left;height: 100px;width: 100%;padding-right: 15px;">
-                            <h5 class="card-title" style="padding-top:0px;margin-top:0px;margin-bottom:0px;color: black;font-size: 16px;">
-                                An economist walks into a brothel
-                            </h5>
-                            <p class="card-text" style="margin-bottom:6px;margin-top:6px;color:var(--primaryGrey);">
-                                Price: 20,000LL
-                            </p>
-                            <p class="card-text" style="margin-bottom:6px;margin-top:6px; font-size:12px; color:var(--secondaryOrange)">
-                                Is it worth swimming in shark-infested waters to surf a 50-foot, career-record wav...
-                            </p>
-                            <p class="card-text" style="margin-bottom: 0px;margin-top:6px;color:black;font-size:13px;font-weight:bold;bottom: 0;position: absolute;">
-                                <i class="material-icons" style="font-size:12px;">location_on</i> Beirut
-                            </p>
-                        </div>
-                        <div style="float:right;position: absolute;right: 0;">
-                            <span class="badge" style="color:white; background-color:#60842D;">4.1</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+<div class="row itemslist" style="padding-bottom:200px;">
+
+    @Html.Partial("_AvailableBook")
+
+    @Html.Partial("_UnavailableBook")
+
+    @Html.Partial("_UnavailableBook")
+
+    @Html.Partial("_UnavailableBook")
 
 </div>
+
+
+
+<script>
+    $(document).ready(function () {
+        booksSection_active();
+        $('.modal-trigger').leanModal();
+    });
+</script>
