--- a/BookPoolV2/Views/Shared/_Filter.cshtml
+++ b/BookPoolV2/Views/Shared/_Filter.cshtml
@@ -34,7 +34,21 @@
                 <div class="card horizontal smallfilter">
                     <div class="card-stacked">
                         <div class="card-content" style="padding: 2px 10px;">
-                            <p>Academic</p>
+                            <p>Available</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card horizontal smallfilter">
+                    <div class="card-stacked">
+                        <div class="card-content" style="padding: 2px 10px;">
+                            <p>Sort by price</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="card horizontal smallfilter">
+                    <div class="card-stacked">
+                        <div class="card-content" style="padding: 2px 10px;">
+                            <p>Sort by popularity</p>
                         </div>
                     </div>
                 </div>
