--- a/BookPoolV2/Views/Shared/_Layout.cshtml
+++ b/BookPoolV2/Views/Shared/_Layout.cshtml
@@ -183,9 +183,12 @@
     <ul id="side-menu" class="sidenav side-menu">
         <li>
             <div class="user-view">
-                <a href="#user"><img class="circle" src="img/icons/user_icon.png"></a>
-                <a href="#name"><span class="black-text name">John Doe</span></a>
-                <a href="#email"><span class="black-text email">jdandturk@gmail.com</span></a>
+                <a style="">
+                    <img class="circle" style="margin:auto;" src="img/icons/user_icon.png">
+                </a>
+                <a style="text-align:center;">
+                    <span class="black-text name">@User.Identity.Name</span>
+                </a>
             </div>
         </li>
         <li>
